Ajout modificateur BEM

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2 class="right-part_title">Latest news</h2>
 
         <article class="right-part_article">
-            <p class="article_theme--green">news</p>
+            <p class="article_theme theme--green">news</p>
             <h3 class="article_title">Lorem ipsum dolor sit amet</h3>
             <div class="article_author">
                 <img src="./images/icon-john.png" alt="Photo de John Marchill" class="author_img">
@@ -51,7 +51,7 @@
         </article>
 
         <article class="right-part_article">
-            <p class="article_theme--red">team</p>
+            <p class="article_theme theme--red">team</p>
             <h3 class="article_title">Le pair programming pour les n00bs</h3>
             <div class="article_author">
                 <img src="./images/icon-dar.png" alt="Logo de Paul Darson" class="author_img">
@@ -64,7 +64,7 @@
         </article>
 
         <article class="right-part_article">
-            <p class="article_theme--blue">work</p>
+            <p class="article_theme theme--blue">work</p>
             <h3 class="article_title">Pourquoi j'aime JS</h3>
             <div class="article_author">
                 <img src="./images/icon-ohz.png" alt="Logo de Bruce Ékoute" class="author_img">
@@ -78,7 +78,7 @@
         </article>
 
         <article class="right-part_article">
-            <p class="article_theme--red">team</p>
+            <p class="article_theme theme--red">team</p>
             <h3 class="article_title">La situation de scribe</h3>
             <div class="article_author">
                 <img src="./images/icon-spr.png" alt="Logo de Otis" class="author_img">
@@ -94,7 +94,7 @@
         </article>
 
         <article class="right-part_article">
-            <p class="article_theme--blue">work</p>
+            <p class="article_theme theme--blue">work</p>
             <h3 class="article_title">Le travail : pourquoi ce n'est jamais naturel ?</h3>
             <div class="article_author">
                 <img src="./images/icon-tr.png" alt="Logo de Trouveur d'Éperon de Wyverne" class="author_img">
@@ -107,7 +107,7 @@
         </article>
 
         <article class="right-part_article">
-            <p class="article_theme--green">news</p>
+            <p class="article_theme theme--green">news</p>
             <h3 class="article_title">Les chats augmentent la longévité</h3>
             <div class="article_author">
                 <img src="./images/icon-tre.png" alt="Logo de Rincevent" class="author_img">
